# Advanced-PL

./: .gitignore  README.md
hw1/: .merlin  README.md  crashes.in  dune  hw1.ml  lexer.mll  parser.mly  syntax.ml  tests.expected  tests.input
hw1/afl-workspace/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
hw1/afl-workspace/queue/: id:000001,src:000000,op:flip1,pos:0,+cov  id:000002,src:000000,op:flip1,pos:0,+cov  id:000003,src:000000,op:flip1,pos:0,+cov  id:000004,src:000000,op:flip1,pos:0,+cov  id:000005,src:000000,op:flip1,pos:1  id:000006,src:000000,op:flip1,pos:1  id:000007,src:000000,op:flip1,pos:3,+cov  id:000008,src:000000,op:flip1,pos:3,+cov  id:000009,src:000000,op:flip1,pos:3,+cov  id:000010,src:000000,op:flip1,pos:4  id:000011,src:000000,op:flip1,pos:5  id:000012,src:000000,op:flip1,pos:5,+cov  id:000013,src:000000,op:flip1,pos:6  id:000014,src:000000,op:flip1,pos:6,+cov  id:000015,src:000000,op:flip1,pos:7,+cov  id:000016,src:000000,op:flip1,pos:8  id:000017,src:000000,op:flip1,pos:9  id:000018,src:000000,op:flip1,pos:11  id:000019,src:000000,op:flip1,pos:13  id:000020,src:000000,op:flip1,pos:13,+cov  id:000021,src:000000,op:flip1,pos:15,+cov  id:000022,src:000000,op:flip1,pos:16  id:000023,src:000000,op:flip1,pos:17  id:000024,src:000000,op:flip1,pos:18  id:000025,src:000000,op:flip1,pos:18  id:000026,src:000000,op:flip1,pos:22  id:000027,src:000000,op:flip1,pos:27  id:000028,src:000000,op:flip1,pos:28  id:000029,src:000000,op:flip1,pos:28,+cov  id:000030,src:000000,op:flip1,pos:30  id:000031,src:000000,op:flip1,pos:30,+cov  id:000032,src:000000,op:flip1,pos:30,+cov  id:000033,src:000000,op:flip1,pos:35  id:000034,src:000000,op:flip1,pos:35,+cov  id:000035,src:000000,op:flip1,pos:36  (+109 more)
hw2/sudoku/: dune  sudoku.ml  test-nonuniq.expected  test-nonuniq.input  test-nosol.input  test-small.expected  test-small.input  test.expected  test.input
hw3/: dune  (+7 more)
hw4/: README.md  dune  hw4.ml  lexer.mll  max.input  max_of_three.input  parser.mly  really-slow-mult.input  slow-mult.input  sum.input  syntax.ml  test.expected  test.input
hw4/hw4-theory/: hw4.tex
hw4/z3/: dune
hw5/: README.md  dune  hw5.ml  lexer.mll  parser.mly  syntax.ml  test.expected  test.input  test_syntax.ml
hw5/hw5-theory/: hw5.tex
(+20 files in other folders)
