(ocamllex
  (modules lexer))

(menhir
 (modules parser)
 (flags --strict))

(executable
 (preprocess (pps ppx_deriving.show))
 (name hw1))

(rule
  (with-stdout-to tests.output
  (with-stdin-from tests.input
    (run ./hw1.exe))))

(rule
 (alias runtest)
 (action (diff tests.expected tests.output)))

